Fix spacing in 2022 conf

--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer {
+@layer base {
   body {
     background: black;
     margin: 0;
     padding: 0;
+  }
+
+  p + p {
+    margin-top: 12px;
+  }
+
+  a {
+    text-decoration: underline;
+  }
+
+  a:hover {
+    text-decoration: none;
   }
 }
